# mcp-memory-service

./: .cursorrules  .cursorrules.echovault  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .mcp.json  .mcp.json.backup  .mcp.json.template  .pre-commit-config.yaml  ADVANCED_SEARCH_ENHANCEMENT.md  CHANGELOG-HISTORIC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.slim  ECHOVAULT_TEST_REPORT.md  HEALTH_CHECK_REPORT.md  JULES_BUG_FIX_FINAL.md  JULES_BUG_FIX_PLAN.md  JULES_LINUX_READY.md  LICENSE  LICENSE.Apache-2.0  MCP-MEMORY-SERVICE-AUDIT-2025-12-30.md  Makefile  NOTICE  PR_341_QUALITY_REPORT.md  README-EchoVault.md  README.md  REAL_CONNECTION_TEST.md  ROADMAP.md  SETUP_CHECKLIST.md  WFGY-IMPLEMENTATION-PLAN.md  WSL2_REALITY_CHECK.md  WSL2_TEST_RESULTS.md  docker-compose.override.yml  docker-compose.yml  fly.toml  (+21 more)
.bolt/: prd-echovault.md  prompt
.claude/: settings.local.json  settings.local.json.backup
.claude/agents/: amp-bridge.md  code-quality-guard.md  code-review.md  context-gathering.md  context-refinement.md  gemini-pr-automator.md  github-release-manager.md
.claude/hooks/: schlock-config.yaml
.genie/state/: agent-sync-cache.json  version.json
.github/ISSUE_TEMPLATE/: remote-memory-improvements.md
.github/workflows/: bridge-tests.yml  changelog-housekeeping.yml  cleanup-images.yml  contributor-activity.yml  daily-triage-execute.yml  discussion-triage.yml  docker-publish.yml  main.yml  pr-auto-label.yml  pr-contributor-welcome.yml  publish-and-test.yml  publish-dual.yml  publish.yml  qa.yml  release.yml
.spec-workflow/steering/: product.md  structure.md  tech.md
archive/deployment/: deploy_fastmcp_fixed.sh  (+2 more)
archive/deployment-configs/: empty_config.yml  smithery.yaml
claude-hooks/: CONFIGURATION.md  MIGRATION.md  README-NATURAL-TRIGGERS.md  README-SESSION-HARVEST.md  README-phase2.md  README.md  config.json  config.template.json  debug-pattern-test.js  install-natural-triggers.sh  install.sh  install_claude_hooks_windows.ps1  install_hooks.py  memory-mode-controller.js  simple-test.js  test-dual-protocol-hook.js  test-mcp-hook.js  test-natural-triggers.js  test-recency-scoring.js
claude_commands/: README.md  memory-api-health.md  memory-api-search.md  memory-api-store.md  memory-context.md  memory-health.md  memory-ingest-dir.md  memory-ingest.md  memory-recall.md  memory-search.md  memory-store.md
docs/: DOCUMENTATION_AUDIT.md  ECHOVAULT_ARCHITECTURE.md  ECHOVAULT_SETUP.md  HOOK_IMPROVEMENTS.md  IMAGE_RETENTION_POLICY.md  IMPLEMENTATION_PLAN_HTTP_SSE.md  LM_STUDIO_COMPATIBILITY.md  README.md  SHARED_STORAGE_ARCHITECTURE.md  architecture.md  cloudflare-setup.md  configuration-fix-embedding-model.md  docker-optimized-build.md  docker-setup.md  enhancement-roadmap-issue-14.md  first-time-setup.md  front-end-spec.md  glama-deployment.md  http-server-management.md  index.html  mcp-apps.md  milvus-backend.md  oauth-setup.md  quick-setup-cloudflare-dual-environment.md  sqlite-vec-backend.md  testing-cloudflare-backend.md  windows-hybrid-setup.md  windows-setup-summary.md
examples/: README-remote-memory.md  README.md  claude-desktop-http-config.json  claude_desktop_config_template.json  claude_desktop_config_windows.json  http-mcp-bridge-robust.js  http-mcp-bridge.js  memory_export_template.json  memory_local_config.json  start_https_example.sh
examples/plugin-smart-tagger/: README.md  pyproject.toml
examples/plugin-smart-tagger/mcp_memory_plugin_smart_tagger/: __init__.py
migrations/: README  alembic.ini  env.py
scripts/: README.md  cleanup_old_volumes.sh  run_http_server.py  run_memory_server.py  summarise_old_events.py  test_installation.py  update_and_restart.sh
sessions/: sessions-config.json
tests/: __init__.py  conftest.py  memory-test.py  test_batch_inference.py  test_blob_store.py  test_cascading_fallback.py  test_config.py  test_content_splitting.py  test_echovault_integration.py  test_entity_extraction.py  test_external_embeddings.py  test_graph_infer_suggest.py  test_graph_relationship_types.py  test_graph_service.py  test_graph_traversal.py  test_hybrid_storage.py  test_insight_cards.py  test_integration_tools.py  test_integrity_monitor.py  test_leader_election.py  test_leader_election_integration.py  test_memory_ontology_integration.py  test_memory_retrieval.py  test_milvus_graph.py  test_minimax_quality.py  test_neon_client.py  test_ontology.py  test_openai_compat_quality.py  test_quality_system.py  test_semantic_reasoner.py  test_sqlite_vec_storage.py  test_tag_search_fix.py  test_tag_taxonomy.py  test_time_parser.py  test_timestamp_preservation.py  test_vector_store.py  test_versioned_update.py
tools/: README.md
video/: package.json
(+703 files in other folders)
