[build-system]
requires = ["hatchling", "build"]
build-backend = "hatchling.build"

[project]
name = "mcp-memory-service"
version = "8.13.0"
description = "Universal MCP memory service with semantic search, multi-client support, and autonomous consolidation for Claude Desktop, VS Code, and 13+ AI applications"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "mcp", "model-context-protocol", "claude-desktop", "semantic-memory", 
    "vector-database", "ai-assistant", "sqlite-vec", "multi-client",
    "semantic-search", "memory-consolidation", "ai-productivity", "vs-code",
    "cursor", "continue", "fastapi", "developer-tools", "cross-platform"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Framework :: FastAPI"
]
authors = [
    { name = "Heinrich Krupp", email = "heinrich.krupp@gmail.com" },
    { name = "Ray Walker", email = "hello@27b.io" }
]
license = { text = "WTFPL" }
dependencies = [
    "tokenizers==0.20.3",
    "fastmcp>=2.13.0",
    "sqlite-vec>=0.1.0",
    "qdrant-client>=1.7.0",
    "build>=0.10.0",
    "aiohttp>=3.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "aiofiles>=23.2.1",
    "psutil>=5.9.0",
    "zeroconf>=0.130.0",
    "pypdf2>=3.0.0",
    "chardet>=5.0.0",
    "click>=8.0.0",
    "httpx>=0.24.0",
    "authlib>=1.2.0",
    "python-jose[cryptography]>=3.3.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typing-extensions>=4.0.0; python_version < '3.11'",
    "tenacity>=8.0.0",
    "optimum[onnxruntime]>=1.16.0", # ONNX backend for 1.5-3x speedup on ARM64
    "onnxruntime>=1.17.0", # Explicit ONNX Runtime for ARM64 optimization
    "toon-format>=0.9.0b1",
]

[project.optional-dependencies]
# Machine learning dependencies for semantic search and embeddings
ml = [
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0"
]
# SQLite-vec with lightweight ONNX embeddings (recommended for most users)
sqlite = [
    "onnxruntime>=1.14.1"
]
# SQLite-vec with full ML capabilities (for advanced features)
sqlite-ml = [
    "mcp-memory-service[sqlite,ml]"
]
# Full installation including all optional dependencies
full = [
    "mcp-memory-service[sqlite,ml]"
]

[project.scripts]
memory = "mcp_memory_service.cli.main:main"
memory-server = "mcp_memory_service.cli.main:memory_server_main"
mcp-memory-server = "mcp_memory_service.mcp_server:main"
unified-memory-server = "mcp_memory_service.unified_server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_memory_service"]

[tool.hatch.version]
path = "src/mcp_memory_service/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=3.5.0",
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py310"
line-length = 129
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_memory_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
